# retail-clickstream-analysis

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.github/: CODEOWNERS  labels.yml  pull_request_template.md
configs/: base.yaml  dev.yaml  prod.yaml
docs/: DATA_CATALOG_raw.md  LIGHTGCN_BIPARTITE_DESIGN.md  LIGHTGCN_BIPARTITE_VS_TRI_EXPERIMENT_LOG.md  LIGHTGCN_TRI_MODEL_DESIGN.md  LIGHTGCN_TRI_TUNING_PLAN.md  PIPELINE_EXECUTION_GUIDE.md  PROMPT_CATALOG.md  SEGMENT_ASSIGNMENT_DESIGN.md  WHY_SEGMENTS.md
notebooks/: 20260703_ML_als_hyperparameter_tuning.ipynb  20260703_ML_bm25_weighting_redesign.ipynb  20260703_ML_cold_threshold_search.ipynb  20260704_ML_v1_vs_v2_segment_quality.ipynb  EDA.ipynb  EDA_customer_features.ipynb  gplr.ipynb  persona_collection.ipynb  persona_generation_full_vs_us_eda.ipynb
reports/: [EDA]_고객_단위_집계_피처_탐색_2026-06-29.md  [EDA]_전체_vs_US_페르소나_생성_비교_2026-06-30.md  [ML]_#7_ALS_성능개선_및_Threshold_검증_2026-07-03.md  [ML]_#8_llm_connector_리팩토링_및_프롬프트_개선_2026-06-30.md  [ML]_GPLR_소비자_페르소나_생성_파이프라인_2026-06-28.md  [ML]_LightGCN_bipartite_vs_tri_페르소나_효과_검증_2026-07-08.md  [ML]_LightGCN_bipartite_그래프_데이터_준비_2026-07-07.md  [ML]_LightGCN_tri_모델_구현_및_스모크테스트_2026-07-07.md  [ML]_LightGCN_tri_전체학습_및_ALS_비교평가_2026-07-08.md  [ML]_LightGCN용_train_전용_세그먼트_재계산_2026-07-05.md  [ML]_LightGCN용_tri-graph_데이터_파이프라인_구축_2026-07-06.md  [ML]_Segment_Naming_v2_LLM_라벨링_2026-07-03.md  [ML]_segment_cluster_k_비교_2026-07-02.md  [ML]_v1_vs_v2_세그먼트_품질_비교_2026-07-04.md  analysis_plan.md  prompts.md
tests/: conftest.py  test_evaluate_lightgcn.py  test_features.py  test_lgcn_graph.py  test_llm_client.py  (+5 more)
(+115 files in other folders)
